2010-03-18  Glenn Morris  <rgm@gnu.org>

	* emacs.c (USAGE4): Hard-code bug address.
	(REPORT_EMACS_BUG_ADDRESS, REPORT_EMACS_BUG_PRETEST_ADDRESS): Remove.
	(bug_reporting_address): Remove.
	(main): Don't call bug_reporting_address.

	* Makefile.in (XFT_LIBS, LIBXPM, LIBJPEG, LIBPNG, LIBTIFF, LIBGIF)
	(LIBGPM, LIBRESOLV): Set using autoconf rather than cpp.

2010-03-15  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_create_frame):
	* frame.c (Vdefault_frame_scroll_bars): Put non-GTK X scroll-bars
	on left.

2010-03-13  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* editfns.c (Fformat): Account for string precision when computing
	field width (Bug#5710).

2010-03-12  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_create_frame): Set default to Qright.

	* frame.c (Vdefault_frame_scroll_bars): Set default to Qright for
	all window systems.

2010-03-12  Eli Zaretskii  <eliz@gnu.org>

	These changes remove termcap.c from the build on Posix platforms.
	* Makefilie.in (termcapobj): Move termcap.o from here...
	(MSDOS_OBJ): ...to here.
	(termcapobj) [!LIBS_TERMCAP]: Remove specialized value, as it is
	now identical to when LIBS_TERMCAP is defined.

	* term.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* cm.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* config.in: Regenerated.  (See top-level ChangeLog.)

2010-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.2.

2010-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	Cleanup setup of gl_state in various parts of the code.
	* syntax.h (SETUP_BUFFER_SYNTAX_TABLE): New macro.
	(SETUP_SYNTAX_TABLE, SETUP_SYNTAX_TABLE_FOR_OBJECT):
	* syntax.c (find_defun_start, Fchar_syntax, Fmatching_paren)
	(skip_chars):
	* regex.c (regex_compile): Use it.
	(re_compile_pattern): Don't set gl_state.current_syntax_table since
	it's now set in regex_compile when/if we need it.

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>
